everything is great

--- a/map.html
+++ b/map.html
@@ -42,7 +42,7 @@ var Path = new google.maps.Polyline({
 clickable: false,
 geodesic: true,
 path: PolylineCoordinates,
-strokeColor: "#51B05D",
+strokeColor: "#EDD992",
 strokeOpacity: 1.000000,
 strokeWeight: 3
 });
@@ -60,7 +60,7 @@ var Path = new google.maps.Polyline({
 clickable: false,
 geodesic: true,
 path: PolylineCoordinates,
-strokeColor: "#C0D2E6",
+strokeColor: "#492092",
 strokeOpacity: 1.000000,
 strokeWeight: 3
 });
@@ -110,10 +110,10 @@ new google.maps.LatLng(32.082858, 34.778617),
 var polygon = new google.maps.Polygon({
 clickable: false,
 geodesic: true,
-fillColor: "#51B05D",
+fillColor: "#EDD992",
 fillOpacity: 0.300000,
 paths: coords,
-strokeColor: "#51B05D",
+strokeColor: "#EDD992",
 strokeOpacity: 1.000000,
 strokeWeight: 1
 });
@@ -163,10 +163,10 @@ new google.maps.LatLng(32.081858, 34.696617),
 var polygon = new google.maps.Polygon({
 clickable: false,
 geodesic: true,
-fillColor: "#51B05D",
+fillColor: "#EDD992",
 fillOpacity: 0.300000,
 paths: coords,
-strokeColor: "#51B05D",
+strokeColor: "#EDD992",
 strokeOpacity: 1.000000,
 strokeWeight: 1
 });
@@ -216,10 +216,10 @@ new google.maps.LatLng(32.087858, 34.706617),
 var polygon = new google.maps.Polygon({
 clickable: false,
 geodesic: true,
-fillColor: "#51B05D",
+fillColor: "#EDD992",
 fillOpacity: 0.300000,
 paths: coords,
-strokeColor: "#51B05D",
+strokeColor: "#EDD992",
 strokeOpacity: 1.000000,
 strokeWeight: 1
 });
@@ -269,10 +269,10 @@ new google.maps.LatLng(32.182858, 34.878617),
 var polygon = new google.maps.Polygon({
 clickable: false,
 geodesic: true,
-fillColor: "#C0D2E6",
+fillColor: "#492092",
 fillOpacity: 0.300000,
 paths: coords,
-strokeColor: "#C0D2E6",
+strokeColor: "#492092",
 strokeOpacity: 1.000000,
 strokeWeight: 1
 });
@@ -322,10 +322,10 @@ new google.maps.LatLng(32.181858, 34.796617),
 var polygon = new google.maps.Polygon({
 clickable: false,
 geodesic: true,
-fillColor: "#C0D2E6",
+fillColor: "#492092",
 fillOpacity: 0.300000,
 paths: coords,
-strokeColor: "#C0D2E6",
+strokeColor: "#492092",
 strokeOpacity: 1.000000,
 strokeWeight: 1
 });
@@ -375,10 +375,10 @@ new google.maps.LatLng(32.187858, 34.806617),
 var polygon = new google.maps.Polygon({
 clickable: false,
 geodesic: true,
-fillColor: "#C0D2E6",
+fillColor: "#492092",
 fillOpacity: 0.300000,
 paths: coords,
-strokeColor: "#C0D2E6",
+strokeColor: "#492092",
 strokeOpacity: 1.000000,
 strokeWeight: 1
 });
